# CacheProject

./: CMakeLists.txt  KICachePolicy.h
SimpleCacheExampleTest/: LFU.h
example/: LFU.h
include/: KLfuCache.h  KLruCache.h
src/: CMakeLists.txt  testAllCache.cpp
